@@ -518,8 +518,8 @@ public class ResourceBundleFilter extends AbstractFilter {
     }
 
     @Override
-    protected void alignFile(BufferedReader sourceFile, BufferedReader translatedFile,
-            org.omegat.filters2.FilterContext fc) throws Exception {
+    protected void alignFile(BufferedReader sourceFile, BufferedReader translatedFile, FilterContext fc,
+                             String sourcePath) throws Exception {
         Map<String, String> source = new HashMap<>();
         Map<String, String> translated = new HashMap<>();
 
@@ -530,7 +530,7 @@ public class ResourceBundleFilter extends AbstractFilter {
         for (Map.Entry<String, String> en : source.entrySet()) {
             String tr = translated.get(en.getKey());
             if (!StringUtil.isEmpty(tr)) {
-                entryAlignCallback.addTranslation(en.getKey(), en.getValue(), tr, false, null, this);
+                entryAlignCallback.addTranslation(en.getKey(), en.getValue(), tr, false, sourcePath, this);
             }
         }
     }
